--- a/app/src/main/res/layout/activity_cemetery_talk_fail.xml
+++ b/app/src/main/res/layout/activity_cemetery_talk_fail.xml
@@ -68,7 +68,8 @@
                 android:paddingTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
 
             <TextView
-                style="@style/cemetery_text_style_1"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                style="@style/cemetery_text_style_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="骨灰当前所在：" />
@@ -129,7 +130,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dimen_3dp"
-                    android:background="@drawable/cemetery_item_line" />
+                    android:background="@drawable/cemetery_item_line_2" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -202,7 +203,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/cemetery_text_style_1"
+                    android:layout_marginTop="@dimen/dimen_10dp"
+                    style="@style/cemetery_text_style_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="预约地点：" />
@@ -219,7 +221,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dimen_3dp"
-                    android:background="@drawable/cemetery_item_line" />
+                    android:background="@drawable/cemetery_item_line_2" />
 
             </LinearLayout>
 
@@ -231,7 +233,7 @@
                 android:paddingTop="@dimen/dimen_10dp">
 
                 <TextView
-                    style="@style/cemetery_text_style_3"
+                    style="@style/cemetery_text_style_3_nonecessary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="备注：" />
@@ -252,7 +254,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3dp"
             android:layout_marginBottom="@dimen/dimen_50dp"
-            android:background="@drawable/cemetery_item_line" />
+            android:background="@drawable/cemetery_item_line_2" />
 
         <Button
             android:id="@+id/bt_submit"
