--- a/app/src/main/res/layout/view_agentman_info.xml
+++ b/app/src/main/res/layout/view_agentman_info.xml
@@ -4,4 +4,161 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_10dp"
+        android:paddingTop="@dimen/dimen_10dp">
+
+        <TextView
+            style="@style/cemetery_text_style_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="经办人姓名：" />
+
+        <EditText
+            style="@style/cemetery_text_style_4"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_cemetery_item_et_1"
+            android:padding="@dimen/dimen_20dp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_10dp"
+        android:paddingTop="@dimen/dimen_10dp">
+
+        <TextView
+            style="@style/cemetery_text_style_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="经办人联系电话：" />
+
+        <EditText
+            style="@style/cemetery_text_style_4"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_cemetery_item_et_1"
+            android:inputType="number"
+            android:padding="@dimen/dimen_20dp" />
+    </LinearLayout>
+
+    <com.shian.shianlife.view.CetemeryTextSelectLayoutView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_10dp"
+        android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
+
+    <TextView
+        style="@style/cemetery_text_style_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_10dp"
+        android:text="经办人地址：" />
+
+    <com.shian.shianlife.view.MapSelectLayoutView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_10dp"
+        android:layout_marginTop="@dimen/dimen_10dp"
+        android:tag="1"></com.shian.shianlife.view.MapSelectLayoutView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_10dp"
+        android:paddingTop="@dimen/dimen_10dp">
+
+        <TextView
+            style="@style/cemetery_text_style_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="经办人身份证：" />
+
+        <EditText
+            style="@style/cemetery_text_style_4"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_cemetery_item_et_1"
+            android:inputType="number"
+            android:padding="@dimen/dimen_20dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_10dp"
+        android:paddingTop="@dimen/dimen_10dp">
+
+        <TextView
+            style="@style/cemetery_text_style_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="经办人身份证号：" />
+
+        <EditText
+            style="@style/cemetery_text_style_4"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_cemetery_item_et_1"
+            android:inputType="number"
+            android:padding="@dimen/dimen_20dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_10dp"
+        android:paddingTop="@dimen/dimen_10dp">
+
+        <TextView
+            style="@style/cemetery_text_style_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="经办人邮箱地址：" />
+
+        <EditText
+            style="@style/cemetery_text_style_4"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_cemetery_item_et_1"
+            android:inputType="textEmailAddress"
+            android:padding="@dimen/dimen_20dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_10dp"
+        android:paddingTop="@dimen/dimen_10dp">
+
+        <TextView
+            style="@style/cemetery_text_style_3_nonecessary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="备注：" />
+
+        <EditText
+            style="@style/cemetery_text_style_4"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_cemetery_item_et_1"
+
+            android:padding="@dimen/dimen_20dp" />
+    </LinearLayout>
 </LinearLayout>
