--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,6 +102,7 @@
     </style>
 
     <style name="cemetery_text_style_3">
+        <item name="android:drawableLeft">@drawable/xingxing_2</item>
         <item name="android:textSize">@dimen/txtsize_27sp</item>
         <item name="android:textColor">@color/cemetery_textcolor</item>
     </style>
@@ -109,5 +110,10 @@
     <style name="cemetery_text_style_4">
         <item name="android:textSize">@dimen/txtsize_30sp</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="cemetery_text_style_3_nonecessary">
+        <item name="android:textSize">@dimen/txtsize_27sp</item>
+        <item name="android:textColor">@color/cemetery_textcolor</item>
     </style>
 </resources>
