--- a/app/src/main/res/layout/view_item_qt.xml
+++ b/app/src/main/res/layout/view_item_qt.xml
@@ -345,6 +345,7 @@
             android:id="@+id/fl_shift"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+
             android:layout_gravity="center"
             android:layout_weight="1">
 
@@ -372,7 +373,7 @@
 
             <TextView
                 style="@style/orderlist_item_btn_textStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dimen_200dp"
                 android:layout_height="@dimen/dimen_60dp"
                 android:paddingLeft="@dimen/dimen_10dp"
                 android:paddingRight="@dimen/dimen_10dp"
@@ -389,7 +390,7 @@
             <TextView
                 android:id="@+id/tv_close"
                 style="@style/orderlist_item_btn_textStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dimen_200dp"
                 android:layout_height="@dimen/dimen_60dp"
                 android:paddingLeft="@dimen/dimen_10dp"
                 android:paddingRight="@dimen/dimen_10dp"
