--- a/app/src/main/res/layout/view_cemetery_qt.xml
+++ b/app/src/main/res/layout/view_cemetery_qt.xml
@@ -16,6 +16,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/ll_build_new"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
