--- a/app/src/main/res/layout/view_cemetery_qt_item.xml
+++ b/app/src/main/res/layout/view_cemetery_qt_item.xml
@@ -290,4 +290,24 @@
             android:background="@drawable/bg_cemetery_item_button_2"
             android:text="未购墓" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dimen_50dp"
+        android:gravity="center"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/bt_detailes"
+            style="@style/cemetery_button_style_1"
+            android:layout_width="@dimen/dimen_250dp"
+            android:layout_height="@dimen/dimen_80dp"
+            android:background="@drawable/bg_cemetery_item_button_1"
+            android:text="订单详情" />
+
+    </LinearLayout>
 </LinearLayout>
