--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,8 @@
     <color name="chlickcolor">#f4dc5f</color>
     <color name="main_blackground">#ECECEC</color>
     <color name="cemetery_textcolor">#83e69f</color>
+
+    <color name="cemetery_titlecolor">#f6c858</color>
     <!-- Dialog Color -->
     <color name="version_msg_color">#ff6699ff</color>
     <color name="message_color">#ffccccff</color>
