--- a/app/src/main/res/layout/view_cemetery_qt_item.xml
+++ b/app/src/main/res/layout/view_cemetery_qt_item.xml
@@ -35,202 +35,21 @@
 
         </FrameLayout>
 
-        <LinearLayout
+        <ListView
+            android:scrollbars="none"
+            android:id="@+id/listview_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:orientation="vertical"
+            android:divider="@drawable/cemetery_item_line"
+            android:dividerHeight="@dimen/dimen_3dp"
             android:paddingBottom="@dimen/dimen_20dp"
             android:paddingLeft="@dimen/dimen_25dp"
             android:paddingRight="@dimen/dimen_25dp"
-            android:paddingTop="@dimen/dimen_20dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="客户姓名：" />
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_3dp"
-                android:background="@drawable/cemetery_item_line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView4"
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="预约时间：" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_3dp"
-                android:background="@drawable/cemetery_item_line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="联系电话：" />
-
-                <TextView
-                    android:id="@+id/tv_phone"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-
-                <ImageView
-                    android:id="@+id/iv_phone"
-                    android:layout_width="@dimen/dimen_50dp"
-                    android:layout_height="@dimen/dimen_50dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/cemetery_phone" />
-            </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_3dp"
-                android:background="@drawable/cemetery_item_line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView5"
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="预约地点：" />
-
-                <TextView
-                    android:id="@+id/tv_location"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_3dp"
-                android:background="@drawable/cemetery_item_line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView7"
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="预约参观公墓：" />
-
-                <TextView
-                    android:id="@+id/tv_cemeteryName"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_3dp"
-                android:background="@drawable/cemetery_item_line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView6"
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="交通工具：" />
-
-                <TextView
-                    android:id="@+id/tv_traffic"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/ceshi"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_3dp"
-                android:background="@drawable/cemetery_item_line" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/cemetery_text_style_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="备注：" />
-
-                <TextView
-                    android:id="@+id/tv_remark"
-                    style="@style/cemetery_text_style_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/bt_userinfo"
-                    android:layout_width="@dimen/dimen_140dp"
-                    android:layout_height="@dimen/dimen_50dp"
-                    android:layout_gravity="center|right"
-                    android:background="@drawable/bg_cemetery_item_button_2"
-                    android:gravity="center"
-                    android:text="洽谈信息"
-                    android:textColor="@color/white" />
-            </LinearLayout>
-        </LinearLayout>
-
+            android:paddingTop="@dimen/dimen_20dp"></ListView>
 
     </RelativeLayout>
 
