预约单列表优化 预约单列表制作

--- a/app/src/main/res/layout/view_cemetery_qt_item_text.xml
+++ b/app/src/main/res/layout/view_cemetery_qt_item_text.xml
@@ -25,7 +25,8 @@
         android:layout_width="@dimen/dimen_50dp"
         android:layout_height="@dimen/dimen_50dp"
         android:layout_gravity="center"
-        android:background="@drawable/cemetery_phone" />
+        android:background="@drawable/cemetery_phone"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/bt_userinfo"
@@ -35,12 +36,14 @@
         android:background="@drawable/bg_cemetery_item_button_2"
         android:gravity="center"
         android:text="洽谈信息"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/bt_map"
+        android:layout_width="@dimen/dimen_50dp"
+        android:layout_height="@dimen/dimen_50dp"
         android:layout_gravity="center|right"
         android:background="@drawable/cemetery_qt_item_map"
-        android:layout_width="@dimen/dimen_50dp"
-        android:layout_height="@dimen/dimen_50dp" />
+        android:visibility="gone" />
 </LinearLayout>
