--- a/app/src/main/res/layout/view_cemetery_qt.xml
+++ b/app/src/main/res/layout/view_cemetery_qt.xml
@@ -9,11 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <ListView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"></ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
+
 
     <LinearLayout
         android:id="@+id/ll_build_new"
