--- a/app/src/main/res/layout/view_cemetery_qt_item.xml
+++ b/app/src/main/res/layout/view_cemetery_qt_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingBottom="@dimen/dimen_45dp"
     android:paddingLeft="@dimen/dimen_25dp"
@@ -16,11 +16,97 @@
         android:orientation="vertical">
 
 
+        <!--<ListView-->
+        <!--android:scrollbars="none"-->
+        <!--android:id="@+id/listview_data"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:orientation="vertical"-->
+        <!--android:divider="@drawable/cemetery_item_line"-->
+        <!--android:dividerHeight="@dimen/dimen_3dp"-->
+        <!--android:paddingBottom="@dimen/dimen_20dp"-->
+        <!--android:paddingLeft="@dimen/dimen_25dp"-->
+        <!--android:paddingRight="@dimen/dimen_25dp"-->
+        <!--android:paddingTop="@dimen/dimen_20dp"></ListView>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/dimen_20dp"
+            android:paddingLeft="@dimen/dimen_25dp"
+            android:paddingRight="@dimen/dimen_25dp"
+            android:paddingTop="@dimen/dimen_20dp">
+
+
+            <include
+                android:id="@+id/itemlayout_1"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@drawable/cemetery_item_line" />
+
+            <include
+                android:id="@+id/itemlayout_2"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@drawable/cemetery_item_line" />
+
+            <include
+                android:id="@+id/itemlayout_3"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@drawable/cemetery_item_line" />
+
+            <include
+                android:id="@+id/itemlayout_4"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@drawable/cemetery_item_line" />
+
+            <include
+                android:id="@+id/itemlayout_5"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+
+            <TextView
+                android:id="@+id/line_5"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@drawable/cemetery_item_line" />
+
+            <include
+                android:id="@+id/itemlayout_6"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+
+            <TextView
+                android:id="@+id/line_6"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3dp"
+                android:background="@drawable/cemetery_item_line" />
+
+            <include
+                android:id="@+id/itemlayout_7"
+                layout="@layout/view_cemetery_qt_item_text"></include>
+        </LinearLayout>
+
         <FrameLayout
             android:layout_width="@dimen/dimen_120dp"
             android:layout_height="@dimen/dimen_120dp"
             android:layout_alignParentRight="true"
-
             android:background="@drawable/cemetery_item_title">
 
             <TextView
@@ -34,22 +120,6 @@
                 android:textSize="@dimen/txtsize_20sp" />
 
         </FrameLayout>
-
-        <ListView
-            android:scrollbars="none"
-            android:id="@+id/listview_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:orientation="vertical"
-            android:divider="@drawable/cemetery_item_line"
-            android:dividerHeight="@dimen/dimen_3dp"
-            android:paddingBottom="@dimen/dimen_20dp"
-            android:paddingLeft="@dimen/dimen_25dp"
-            android:paddingRight="@dimen/dimen_25dp"
-            android:paddingTop="@dimen/dimen_20dp"></ListView>
 
     </RelativeLayout>
 
@@ -65,6 +135,7 @@
         android:visibility="gone">
 
         <Button
+            android:id="@+id/bt_reject"
             style="@style/cemetery_button_style_1"
             android:layout_width="@dimen/dimen_250dp"
             android:layout_height="@dimen/dimen_80dp"
@@ -73,6 +144,7 @@
             android:text="拒单" />
 
         <Button
+            android:id="@+id/bt_accepted"
             style="@style/cemetery_button_style_1"
             android:layout_width="@dimen/dimen_250dp"
             android:layout_height="@dimen/dimen_80dp"
@@ -117,8 +189,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/dimen_50dp"
         android:gravity="center"
-        android:visibility="gone"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/bt_detailes"
