--- a/app/src/main/res/layout/activity_build_new_order.xml
+++ b/app/src/main/res/layout/activity_build_new_order.xml
@@ -1,159 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_build_new_order"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cemetery_bc"
-    android:orientation="vertical"
+    android:scrollbars="none"
     tools:context="com.shian.shianlife.activity.cemetery.BuildNewOrderActivity">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_build_new_order"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/dimen_25dp"
-        android:paddingLeft="@dimen/dimen_35dp"
-        android:paddingRight="@dimen/dimen_35dp"
-        android:paddingTop="@dimen/dimen_25dp">
+        tools:context="com.shian.shianlife.activity.cemetery.BuildNewOrderActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/dimen_10dp"
-            android:paddingTop="@dimen/dimen_10dp">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/dimen_25dp"
+            android:paddingLeft="@dimen/dimen_35dp"
+            android:paddingRight="@dimen/dimen_35dp"
+            android:paddingTop="@dimen/dimen_25dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/dimen_10dp"
+                android:paddingTop="@dimen/dimen_10dp">
+
+                <TextView
+                    style="@style/cemetery_text_style_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="客户姓名：" />
+
+
+                <EditText
+                    android:id="@+id/et_name"
+                    style="@style/cemetery_text_style_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dimen_80dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_cemetery_item_et_1"
+                    android:padding="@dimen/dimen_20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/dimen_10dp"
+                android:paddingTop="@dimen/dimen_10dp">
+
+                <TextView
+                    style="@style/cemetery_text_style_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="联系电话：" />
+
+                <EditText
+                    android:id="@+id/et_phone"
+                    style="@style/cemetery_text_style_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dimen_80dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_cemetery_item_et_1"
+                    android:inputType="number"
+                    android:padding="@dimen/dimen_20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/dimen_10dp"
+                android:paddingTop="@dimen/dimen_10dp">
+
+                <TextView
+                    style="@style/cemetery_text_style_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="预约时间：" />
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    style="@style/cemetery_text_style_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dimen_80dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_cemetery_item_et_1"
+                    android:padding="@dimen/dimen_20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/dimen_10dp"
+                android:paddingTop="@dimen/dimen_10dp">
+
+                <TextView
+                    style="@style/cemetery_text_style_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="参观人数：" />
+
+                <EditText
+                    android:id="@+id/et_num"
+                    style="@style/cemetery_text_style_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dimen_80dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_cemetery_item_et_1"
+                    android:inputType="number"
+                    android:padding="@dimen/dimen_20dp" />
+            </LinearLayout>
+
+            <com.shian.shianlife.view.CetemeryTextSelectLayoutView
+                android:id="@+id/select_cemeteryname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
+
+            <com.shian.shianlife.view.CetemeryTextSelectLayoutView
+                android:id="@+id/select_traffic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
 
             <TextView
                 style="@style/cemetery_text_style_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="客户姓名：" />
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:text="客户地址：" />
 
-
-            <EditText
-                android:id="@+id/et_name"
-                style="@style/cemetery_text_style_4"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_cemetery_item_et_1"
-                android:padding="@dimen/dimen_20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/dimen_10dp"
-            android:paddingTop="@dimen/dimen_10dp">
-
-            <TextView
-                style="@style/cemetery_text_style_3"
-                android:layout_width="wrap_content"
+            <com.shian.shianlife.view.MapSelectLayoutView
+                android:id="@+id/mapselect"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="联系电话：" />
+                android:tag="1"></com.shian.shianlife.view.MapSelectLayoutView>
 
-            <EditText
-                android:id="@+id/et_phone"
-                style="@style/cemetery_text_style_4"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_cemetery_item_et_1"
-                android:inputType="number"
-                android:padding="@dimen/dimen_20dp" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/dimen_10dp"
-            android:paddingTop="@dimen/dimen_10dp">
-
-            <TextView
-                style="@style/cemetery_text_style_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="预约时间：" />
-
-            <TextView
-                android:id="@+id/tv_time"
-                style="@style/cemetery_text_style_4"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_cemetery_item_et_1"
-                android:padding="@dimen/dimen_20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/dimen_10dp"
-            android:paddingTop="@dimen/dimen_10dp">
-
-            <TextView
-                style="@style/cemetery_text_style_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="参观人数：" />
-
-            <EditText
-                android:id="@+id/et_num"
-                style="@style/cemetery_text_style_4"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_cemetery_item_et_1"
-                android:inputType="number"
-                android:padding="@dimen/dimen_20dp" />
-        </LinearLayout>
-
-        <com.shian.shianlife.view.CetemeryTextSelectLayoutView
-            android:id="@+id/select_cemeteryname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_10dp"
-            android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
-
-        <com.shian.shianlife.view.CetemeryTextSelectLayoutView
-            android:id="@+id/select_traffic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_10dp"
-            android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
 
         <TextView
-            android:layout_marginTop="@dimen/dimen_10dp"
-            style="@style/cemetery_text_style_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="客户地址：" />
-
-        <com.shian.shianlife.view.MapSelectLayoutView
-            android:id="@+id/mapselect"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:tag="1"></com.shian.shianlife.view.MapSelectLayoutView>
+            android:layout_height="@dimen/dimen_3dp"
+            android:layout_marginBottom="@dimen/dimen_50dp"
+            android:layout_marginTop="@dimen/dimen_40dp"
+            android:background="@drawable/cemetery_item_line_2" />
 
+        <Button
+            android:id="@+id/bt_submit"
+            style="@style/cemetery_button_style_1"
+            android:layout_width="@dimen/dimen_250dp"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_gravity="center"
+            android:background="@drawable/bg_cemetery_item_button_1"
+            android:visibility="gone" />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_3dp"
-        android:layout_marginBottom="@dimen/dimen_50dp"
-        android:layout_marginTop="@dimen/dimen_40dp"
-        android:background="@drawable/cemetery_item_line_2" />
-
-    <Button
-        android:visibility="gone"
-        android:id="@+id/bt_submit"
-        style="@style/cemetery_button_style_1"
-        android:layout_width="@dimen/dimen_250dp"
-        android:layout_height="@dimen/dimen_80dp"
-        android:layout_gravity="center"
-        android:background="@drawable/bg_cemetery_item_button_1" />
-</LinearLayout>
+</ScrollView>
