--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -108,6 +108,7 @@
     </style>
 
     <style name="cemetery_text_style_4">
+        <item name="android:singleLine">true</item>
         <item name="android:textSize">@dimen/txtsize_30sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
