--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -31,6 +31,12 @@
                 android:visibility="gone" />
         </RelativeLayout>
 
+
+        <com.shian.shianlife.common.view.editor.MainSetmealOtherView
+            android:id="@+id/msvother"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></com.shian.shianlife.common.view.editor.MainSetmealOtherView>
+
         <com.shian.shianlife.common.view.editor.MainSetmealView
             android:id="@+id/msv"
             android:layout_width="match_parent"
@@ -53,7 +59,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dimen_20dp"
             android:layout_marginRight="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/dimen_40dp" />
+            android:layout_marginTop="@dimen/dimen_40dp"
+            android:visibility="gone" />
 
         <com.shian.shianlife.common.view.order.AddedSetmealView
             android:id="@+id/asv"
