--- a/app/src/main/res/layout/activity_pay_ding.xml
+++ b/app/src/main/res/layout/activity_pay_ding.xml
@@ -234,7 +234,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:checked="true" />
+               />
         </LinearLayout>
 
         <View
@@ -325,6 +325,7 @@
             </LinearLayout>
 
             <CheckBox
+                android:checked="true"
                 android:id="@+id/cb_weixin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
