--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="cemetery_textcolor">#83e69f</color>
     <color name="zhy_line">#dfdfdf</color>
     <color name="zhy_line_2">#898989</color>
+    <color name="zhy_line_3">#e4e4e4</color>
     <color name="cemetery_titlecolor">#f6c858</color>
     <color name="gray_text">#767676</color>
     <!-- Dialog Color -->
