--- a/app/src/main/res/layout/view_mainsetmealother_listview_items_items.xml
+++ b/app/src/main/res/layout/view_mainsetmealother_listview_items_items.xml
@@ -1,46 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipelayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
+        android:id="@+id/ll_bottom"
+        android:layout_width="@dimen/dimen_400dp"
+        android:layout_height="match_parent"
+        android:weightSum="2"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_detail"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@color/cemetery_titlecolor"
+            android:text="详情"
+            android:textColor="@color/black_item_shua_textcolor"
+            android:textSize="@dimen/dimen_22dp" />
+
+        <TextView
+            android:id="@+id/tv_delete"
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/blackgroundmain"
+            android:text="删除"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_22dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:background="@color/main_blackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray_text"
+                android:textSize="@dimen/dimen_26dp" />
+
+            <ImageView
+                android:id="@+id/iv_detail"
+                android:layout_width="@dimen/dimen_22dp"
+                android:layout_height="@dimen/dimen_26dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/dimen_10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/zhy_sku_detail" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:textColor="@color/gray_text"
             android:textSize="@dimen/dimen_26dp" />
 
-        <ImageView
-            android:id="@+id/iv_detail"
-            android:layout_width="@dimen/dimen_22dp"
-            android:layout_height="@dimen/dimen_26dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dimen_10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/zhy_sku_detail" />
+        <TextView
+            android:id="@+id/tv_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:textColor="@color/gray_text"
+            android:textSize="@dimen/dimen_26dp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:textColor="@color/gray_text"
-        android:textSize="@dimen/dimen_26dp" />
 
-    <TextView
-        android:id="@+id/tv_money"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:textColor="@color/gray_text"
-        android:textSize="@dimen/dimen_26dp" />
-
-</LinearLayout>
+</com.daimajia.swipe.SwipeLayout>
