--- a/app/src/main/res/layout/view_orders.xml
+++ b/app/src/main/res/layout/view_orders.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:background="@drawable/bg_setmeal"
     android:orientation="vertical" >
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_orders_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
